# Shell-Personalizada-SO1

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  README.md  config.json
.github/actions/building/: action.yml
.github/actions/coverage_and_test/: action.yml
include/: commands.h  globals.h  monitor.h  shell_utils.h  signal_handlers.h
src/: commands.c  main.c  monitor.c  shell_utils.c  signal_handlers.c
tests/: CMakeLists.txt  test_shell.c
